fix: 虚空万葬按键以及绑定